--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                                 <input type="text" class="header__email--input" placeholder="Your E-mail Address">
                                 <button class="header__email--btn">Get Started</button>
                             </div>
+                            <p class="header__customers--title">
+                                OUR TRUSTED CUSTOMERS
+                            </p>
+                            <img class="header__customers" src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="">
                         </div>
-                        <p class="header__customers--title">
-                            OUR TRUSTED CUSTOMERS
-                        </p>
-                        <img class="header__customers" src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="">
                         <figure class="header__img--wrapper">
                             <img src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" alt="">
                         </figure>
@@ -356,137 +356,135 @@
      <section id="pricing">
         <div class="container">
             <div class="row">
-                <div class="pricing__description">
-                    <div class="section__tag">
-                        Pricing
+                <div class="section__tag">
+                    Pricing
+                </div>
+                <h2 class="section__title">
+                    Reasonable &amp; Flexible <span class="purple">Plans.</span>
+                </h2>
+                <p class="section__para">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <div class="plans">
+                    <!-- Plan 1: Personal -->
+                    <div class="plan">
+                        <div class="plan__stripe">
+                        </div>
+                        <div class="plan__top">
+                            <div class="plan__name">
+                                PERSONAL
+                            </div>
+                            <div class="plan__price">
+                                $17.99
+                            </div>
+                            <div class="plan__duration">
+                                MONTHLY
+                            </div>
+                        </div>
+                        <div class="plan__middle">
+                            <div class="plan__target">
+                                For Individuals
+                            </div>
+                            <div class="plan__feature">
+                                30 Templates
+                            </div>
+                            <div class="plan__feature">
+                                7 Landing Pages
+                            </div>
+                            <div class="plan__feature">
+                                12 Internal Pages
+                            </div>
+                            <div class="plan__feature">
+                                Basic Assistance
+                            </div>
+                        </div>
+                        <div class="plan__bottom">
+                            <button class="plan__button">
+                                BUY NOW
+                            </button>
+                        </div>
                     </div>
-                    <h2 class="section__title">
-                        Reasonable &amp; Flexible <span class="purple">Plans.</span>
-                    </h2>
-                    <p class="section__para">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    </p>
-                    <div class="plans">
-                        <!-- Plan 1: Personal -->
-                        <div class="plan">
-                            <div class="plan__stripe">
+                    <!-- Plan 2: Business -->
+                    <div class="plan">
+                        <div class="plan__stripe">
+                        </div>
+                        <div class="plan__top">
+                            <div class="plan__name">
+                                BUSINESS
                             </div>
-                            <div class="plan__top">
-                                <div class="plan__name">
-                                    PERSONAL
-                                </div>
-                                <div class="plan__price">
-                                    $17.99
-                                </div>
-                                <div class="plan__duration">
-                                    MONTHLY
-                                </div>
+                            <div class="plan__price">
+                                $37.99
                             </div>
-                            <div class="plan__middle">
-                                <div class="plan__target">
-                                    For Individuals
-                                </div>
-                                <div class="plan__feature">
-                                    30 Templates
-                                </div>
-                                <div class="plan__feature">
-                                    7 Landing Pages
-                                </div>
-                                <div class="plan__feature">
-                                    12 Internal Pages
-                                </div>
-                                <div class="plan__feature">
-                                    Basic Assistance
-                                </div>
-                            </div>
-                            <div class="plan__bottom">
-                                <button class="plan__button">
-                                    BUY NOW
-                                </button>
+                            <div class="plan__duration">
+                                MONTHLY
                             </div>
                         </div>
-                        <!-- Plan 2: Business -->
-                        <div class="plan">
-                            <div class="plan__stripe">
+                        <div class="plan__middle">
+                            <div class="plan__target">
+                                For Small Businesses
                             </div>
-                            <div class="plan__top">
-                                <div class="plan__name">
-                                    BUSINESS
-                                </div>
-                                <div class="plan__price">
-                                    $37.99
-                                </div>
-                                <div class="plan__duration">
-                                    MONTHLY
-                                </div>
+                            <div class="plan__feature">
+                                60 Templates
                             </div>
-                            <div class="plan__middle">
-                                <div class="plan__target">
-                                    For Small Businesses
-                                </div>
-                                <div class="plan__feature">
-                                    60 Templates
-                                </div>
-                                <div class="plan__feature">
-                                    15 Landing Pages
-                                </div>
-                                <div class="plan__feature">
-                                    22 Internal Pages
-                                </div>
-                                <div class="plan__feature">
-                                    Priority Assistance
-                                </div>
+                            <div class="plan__feature">
+                                15 Landing Pages
                             </div>
-                            <div class="plan__bottom">
-                                <button class="plan__button">
-                                    BUY NOW
-                                </button>
+                            <div class="plan__feature">
+                                22 Internal Pages
+                            </div>
+                            <div class="plan__feature">
+                                Priority Assistance
                             </div>
                         </div>
-                        <!-- Plan 3: Enterprise -->
-                        <div class="plan">
-                            <div class="plan__stripe">
-                            </div>
-                            <div class="plan__top">
-                                <div class="plan__name">
-                                    ENTERPRISE
-                                </div>
-                                <div class="plan__price">
-                                    $57.99
-                                </div>
-                                <div class="plan__duration">
-                                    MONTHLY
-                                </div>
-                            </div>
-                            <div class="plan__middle">
-                                <div class="plan__target">
-                                    For Individuals
-                                </div>
-                                <div class="plan__feature">
-                                    90 Templates
-                                </div>
-                                <div class="plan__feature">
-                                    27 Landing Pages
-                                </div>
-                                <div class="plan__feature">
-                                    37 Internal Pages
-                                </div>
-                                <div class="plan__feature">
-                                    Personal Assistance
-                                </div>
-                            </div>
-                            <div class="plan__bottom">
-                                <button class="plan__button">
-                                    BUY NOW
-                                </button>
-                            </div>
+                        <div class="plan__bottom">
+                            <button class="plan__button">
+                                BUY NOW
+                            </button>
                         </div>
-                        <svg width="600" height="600" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg" class="plans__blob">
-                            <g transform="translate(300,300)">
-                                <path d="M82,-98.3C129.8,-57.7,208.2,-54.1,229.6,-26.6C251.1,1,215.6,52.5,172.9,74.9C130.2,97.2,80.3,90.4,37.8,107.5C-4.8,124.7,-40,165.7,-63.3,162.3C-86.5,158.8,-97.8,110.9,-109.3,72.2C-120.7,33.5,-132.2,4.1,-140.1,-37.4C-147.9,-79,-152.1,-132.6,-128.1,-177.3C-104.1,-222.1,-52.1,-258,-17.5,-237.2C17.1,-216.4,34.3,-138.9,82,-98.3Z" fill="#FFB4BC"></path>
-                            </g>
-                        </svg>
                     </div>
+                    <!-- Plan 3: Enterprise -->
+                    <div class="plan">
+                        <div class="plan__stripe">
+                        </div>
+                        <div class="plan__top">
+                            <div class="plan__name">
+                                ENTERPRISE
+                            </div>
+                            <div class="plan__price">
+                                $57.99
+                            </div>
+                            <div class="plan__duration">
+                                MONTHLY
+                            </div>
+                        </div>
+                        <div class="plan__middle">
+                            <div class="plan__target">
+                                For Individuals
+                            </div>
+                            <div class="plan__feature">
+                                90 Templates
+                            </div>
+                            <div class="plan__feature">
+                                27 Landing Pages
+                            </div>
+                            <div class="plan__feature">
+                                37 Internal Pages
+                            </div>
+                            <div class="plan__feature">
+                                Personal Assistance
+                            </div>
+                        </div>
+                        <div class="plan__bottom">
+                            <button class="plan__button">
+                                BUY NOW
+                            </button>
+                        </div>
+                    </div>
+                    <svg width="600" height="600" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg" class="plans__blob">
+                        <g transform="translate(300,300)">
+                            <path d="M82,-98.3C129.8,-57.7,208.2,-54.1,229.6,-26.6C251.1,1,215.6,52.5,172.9,74.9C130.2,97.2,80.3,90.4,37.8,107.5C-4.8,124.7,-40,165.7,-63.3,162.3C-86.5,158.8,-97.8,110.9,-109.3,72.2C-120.7,33.5,-132.2,4.1,-140.1,-37.4C-147.9,-79,-152.1,-132.6,-128.1,-177.3C-104.1,-222.1,-52.1,-258,-17.5,-237.2C17.1,-216.4,34.3,-138.9,82,-98.3Z" fill="#FFB4BC"></path>
+                        </g>
+                    </svg>
                 </div>
             </div>
         </div>
@@ -691,39 +689,37 @@
                         Disclaimer
                     </a>
                 </div>
-                <div class="footer__divider">
-
+            </div>
+            <div class="footer__divider"></div>
+            <div class="footer__bottom">
+                <div class="footer__logo">
+                    <img class="footer__logo--img" src="./assets/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="">
+                    <h5 class="footer__logo--text">
+                        Treact Inc.
+                    </h5>
                 </div>
-                <div class="footer__bottom">
-                    <div class="footer__logo">
-                        <img class="footer__logo--img" src="./assets/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="">
-                        <h5 class="footer__logo--text">
-                            Treact Inc.
-                        </h5>
-                    </div>
-                    <div class="footer__copyright">
-                        © 2018 Treact Inc. All Rights Reserved.
-                    </div>
-                    <div class="footer__socials">
-                        <a class="footer__social--link">
-                            <svg fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M14 13.5h2.5l1-4H14v-2c0-1.03 0-2 2-2h1.5V2.14c-.326-.043-1.557-.14-2.857-.14C11.928 2 10 3.657 10 6.7v2.8H7v4h3V22h4v-8.5z">
-                                </path>
-                            </svg>
-                        </a>
-                        <a class="footer__social--link">
-                            <svg fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M22.162 5.656a8.384 8.384 0 01-2.402.658A4.196 4.196 0 0021.6 4c-.82.488-1.719.83-2.656 1.015a4.182 4.182 0 00-7.126 3.814 11.874 11.874 0 01-8.62-4.37 4.168 4.168 0 00-.566 2.103c0 1.45.738 2.731 1.86 3.481a4.168 4.168 0 01-1.894-.523v.052a4.185 4.185 0 003.355 4.101 4.21 4.21 0 01-1.89.072A4.185 4.185 0 007.97 16.65a8.394 8.394 0 01-6.191 1.732 11.83 11.83 0 006.41 1.88c7.693 0 11.9-6.373 11.9-11.9 0-.18-.005-.362-.013-.54a8.496 8.496 0 002.087-2.165z">
-                                </path>
-                            </svg>
-                        </a>
-                        <a class="footer__social--link">
-                            <svg fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M21.543 6.498C22 8.28 22 12 22 12s0 3.72-.457 5.502c-.254.985-.997 1.76-1.938 2.022C17.896 20 12 20 12 20s-5.893 0-7.605-.476c-.945-.266-1.687-1.04-1.938-2.022C2 15.72 2 12 2 12s0-3.72.457-5.502c.254-.985.997-1.76 1.938-2.022C6.107 4 12 4 12 4s5.896 0 7.605.476c.945.266 1.687 1.04 1.938 2.022zM10 15.5l6-3.5-6-3.5v7z">
-                                </path>
-                            </svg>
-                        </a>
-                    </div>
+                <div class="footer__copyright">
+                    © 2018 Treact Inc. All Rights Reserved.
+                </div>
+                <div class="footer__socials">
+                    <a class="footer__social--link">
+                        <svg fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M14 13.5h2.5l1-4H14v-2c0-1.03 0-2 2-2h1.5V2.14c-.326-.043-1.557-.14-2.857-.14C11.928 2 10 3.657 10 6.7v2.8H7v4h3V22h4v-8.5z">
+                            </path>
+                        </svg>
+                    </a>
+                    <a class="footer__social--link">
+                        <svg fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M22.162 5.656a8.384 8.384 0 01-2.402.658A4.196 4.196 0 0021.6 4c-.82.488-1.719.83-2.656 1.015a4.182 4.182 0 00-7.126 3.814 11.874 11.874 0 01-8.62-4.37 4.168 4.168 0 00-.566 2.103c0 1.45.738 2.731 1.86 3.481a4.168 4.168 0 01-1.894-.523v.052a4.185 4.185 0 003.355 4.101 4.21 4.21 0 01-1.89.072A4.185 4.185 0 007.97 16.65a8.394 8.394 0 01-6.191 1.732 11.83 11.83 0 006.41 1.88c7.693 0 11.9-6.373 11.9-11.9 0-.18-.005-.362-.013-.54a8.496 8.496 0 002.087-2.165z">
+                            </path>
+                        </svg>
+                    </a>
+                    <a class="footer__social--link">
+                        <svg fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M21.543 6.498C22 8.28 22 12 22 12s0 3.72-.457 5.502c-.254.985-.997 1.76-1.938 2.022C17.896 20 12 20 12 20s-5.893 0-7.605-.476c-.945-.266-1.687-1.04-1.938-2.022C2 15.72 2 12 2 12s0-3.72.457-5.502c.254-.985.997-1.76 1.938-2.022C6.107 4 12 4 12 4s5.896 0 7.605.476c.945.266 1.687 1.04 1.938 2.022zM10 15.5l6-3.5-6-3.5v7z">
+                            </path>
+                        </svg>
+                    </a>
                 </div>
             </div>
         </div>
