--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a class="modal__link">Pricing</a>
                         <a class="modal__link">Contact Us</a>
                         <a class="modal__link">Login</a>
-                        <a class="modal__link modal__link--primary">Sign Up</a>
+                        <a class="modal__link--primary">Sign Up</a>
                     </div>
                 </div>
             </div>
